Выполение задания по ТЗ 16