@@ -1,124 +1,50 @@
 package ru.practicum.shareit.item;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.json.JsonTest;
-import org.springframework.boot.test.json.JacksonTester;
+import ru.practicum.shareit.booking.dto.BookingDto;
 import ru.practicum.shareit.item.dto.ItemDto;
-import ru.practicum.shareit.item.dto.ItemCreateDto;
-import ru.practicum.shareit.item.dto.ItemUpdateDto;
 import ru.practicum.shareit.user.dto.UserDto;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
-import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-@JsonTest
-public class ItemDtoTest {
+class ItemDtoTest {
 
-    @Autowired
-    private JacksonTester<ItemDto> itemDtoJsonTester;
-
-    @Autowired
-    private JacksonTester<ItemCreateDto> itemCreateDtoJsonTester;
-
-    @Autowired
-    private JacksonTester<ItemUpdateDto> itemUpdateDtoJsonTester;
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Test
     void testItemDtoSerialization() throws IOException {
+        // Создаём экземпляр ItemDto для сериализации
         ItemDto itemDto = ItemDto.builder()
                 .id(1L)
                 .name("Test Item")
                 .description("Test Description")
                 .available(true)
-                .owner(new UserDto())
-                .comments(List.of())
-                .requestId(2L)
+                .owner(new UserDto(1L, "Test User", "test@example.com"))
+                .lastBooking(new BookingDto())
+                .comments(Collections.emptyList())
+                .nextBooking(new BookingDto())
+                .requestId(1L)
                 .build();
 
-        var jsonContent = itemDtoJsonTester.write(itemDto);
-
-        assertThat(jsonContent).hasJsonPath("$.id");
-        assertThat(jsonContent).hasJsonPath("$.name");
-        assertThat(jsonContent).hasJsonPath("$.description");
-        assertThat(jsonContent).extractingJsonPathNumberValue("$.id")
-                .isEqualTo(1);
-        assertThat(jsonContent).extractingJsonPathStringValue("$.name")
-                .isEqualTo("Test Item");
-        assertThat(jsonContent).extractingJsonPathStringValue("$.description")
-                .isEqualTo("Test Description");
-    }
-
-    @Test
-    void testItemCreateDtoSerialization() throws IOException {
-        ItemCreateDto itemCreateDto = ItemCreateDto.builder()
-                .name("Test Item")
-                .description("Test Description")
-                .available(true)
-                .requestId(2L)
-                .build();
-
-        var jsonContent = itemCreateDtoJsonTester.write(itemCreateDto);
-
-        assertThat(jsonContent).hasJsonPath("$.name");
-        assertThat(jsonContent).hasJsonPath("$.description");
-        assertThat(jsonContent).extractingJsonPathStringValue("$.name")
-                .isEqualTo("Test Item");
-        assertThat(jsonContent).extractingJsonPathStringValue("$.description")
-                .isEqualTo("Test Description");
-    }
-
-    @Test
-    void testItemUpdateDtoSerialization() throws IOException {
-        ItemUpdateDto itemUpdateDto = new ItemUpdateDto();
-        itemUpdateDto.setName("Test Item");
-        itemUpdateDto.setDescription("Test Description");
-        itemUpdateDto.setAvailable(true);
-        itemUpdateDto.setRequestId(2L);
-
-        var jsonContent = itemUpdateDtoJsonTester.write(itemUpdateDto);
-
-        assertThat(jsonContent).hasJsonPath("$.name");
-        assertThat(jsonContent).hasJsonPath("$.description");
-        assertThat(jsonContent).extractingJsonPathStringValue("$.name")
-                .isEqualTo("Test Item");
-        assertThat(jsonContent).extractingJsonPathStringValue("$.description")
-                .isEqualTo("Test Description");
+        String json = objectMapper.writeValueAsString(itemDto);
+        assertNotNull(json);
+        ItemDto deserializedItemDto = objectMapper.readValue(json, ItemDto.class);
+        assertEquals(itemDto, deserializedItemDto);
     }
 
     @Test
     void testItemDtoDeserialization() throws IOException {
-        String json = "{\"id\":1,\"name\":\"Test Item\",\"description\":\"Test Description\",\"available\":true,\"owner\":{\"id\":null,\"name\":null,\"email\":null},\"comments\":[],\"requestId\":2}";
-        ItemDto itemDto = itemDtoJsonTester.parseObject(json);
+        String json = "{\"id\":1,\"name\":\"Test Item\",\"description\":\"Test Description\",\"available\":true,\"owner\":{\"id\":1,\"name\":\"Test User\",\"email\":\"test@example.com\"},\"lastBooking\":null,\"comments\":[],\"nextBooking\":null,\"requestId\":1}";
+        ItemDto itemDto = objectMapper.readValue(json, ItemDto.class);
 
-        assertThat(itemDto.getId()).isEqualTo(1L);
-        assertThat(itemDto.getName()).isEqualTo("Test Item");
-        assertThat(itemDto.getDescription()).isEqualTo("Test Description");
-        assertThat(itemDto.getAvailable()).isEqualTo(true);
-        assertThat(itemDto.getRequestId()).isEqualTo(2L);
-    }
-
-    @Test
-    void testItemCreateDtoDeserialization() throws IOException {
-        String json = "{\"name\":\"Test Item\",\"description\":\"Test Description\",\"available\":true,\"requestId\":2}";
-        ItemCreateDto itemCreateDto = itemCreateDtoJsonTester.parseObject(json);
-
-        assertThat(itemCreateDto.getName()).isEqualTo("Test Item");
-        assertThat(itemCreateDto.getDescription()).isEqualTo("Test Description");
-        assertThat(itemCreateDto.getAvailable()).isEqualTo(true);
-        assertThat(itemCreateDto.getRequestId()).isEqualTo(2L);
-    }
-
-    @Test
-    void testItemUpdateDtoDeserialization() throws IOException {
-        String json = "{\"name\":\"Test Item\",\"description\":\"Test Description\",\"available\":true,\"requestId\":2}";
-        ItemUpdateDto itemUpdateDto = itemUpdateDtoJsonTester.parseObject(json);
-
-        assertThat(itemUpdateDto.getName()).isEqualTo("Test Item");
-        assertThat(itemUpdateDto.getDescription()).isEqualTo("Test Description");
-        assertThat(itemUpdateDto.getAvailable()).isEqualTo(true);
-        assertThat(itemUpdateDto.getRequestId()).isEqualTo(2L);
+        assertNotNull(itemDto);
+        assertEquals(1L, itemDto.getId());
+        assertEquals("Test Item", itemDto.getName());
+        assertEquals("Test Description", itemDto.getDescription());
     }
 }
